Updated static + launch pages and changed db auth

--- a/RocketControlUnitGUI/src/styles/launch.postcss
+++ b/RocketControlUnitGUI/src/styles/launch.postcss
@@ -9,7 +9,7 @@
     background-color: #d4163c;
 }
 
-.pbv1_slider {
+.launch_pbv1_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.143);
     left: 15.5%;
@@ -17,7 +17,7 @@
     font-size: 16px;
 }
 
-.pbv2_slider {
+.launch_pbv2_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.048);
     left: 33.5%;
@@ -25,7 +25,7 @@
     font-size: 16px;
 }
 
-.pbv3_slider {
+.launch_pbv3_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.292);
     left: 17%;
@@ -33,7 +33,7 @@
     font-size: 16px;
 }
 
-.pbv4_slider {
+.launch_pbv4_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.318);
     left: 34.3%;
@@ -41,7 +41,7 @@
     font-size: 16px;
 }
 
-.pbv5_slider {
+.launch_pbv5_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -50,7 +50,7 @@
     visibility:hidden;
 }
 
-.pbv6_slider {
+.launch_pbv6_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -59,7 +59,7 @@
     visibility:hidden;
 }
 
-.pbv7_slider {
+.launch_pbv7_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -68,7 +68,7 @@
     visibility:hidden;
 }
 
-.pbv8_slider {
+.launch_pbv8_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -77,7 +77,7 @@
     visibility:hidden;
 }
 
-.pbv9_slider {
+.launch_pbv9_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -86,7 +86,7 @@
     visibility:hidden;
 }
 
-.pbv10_slider {
+.launch_pbv10_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -95,7 +95,7 @@
     visibility:hidden;
 }
 
-.pbv11_slider {
+.launch_pbv11_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -104,7 +104,7 @@
     visibility:hidden;
 }
 
-.sol1_slider {
+.launch_sol1_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.143);
     left: 23%;
@@ -112,7 +112,7 @@
     font-size: 16px;
 }
 
-.sol2_slider {
+.launch_sol2_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.3);
     left: 24%;
@@ -120,7 +120,7 @@
     font-size: 16px;
 }
 
-.sol3_slider {
+.launch_sol3_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.1);
     left: 53.3%;
@@ -128,7 +128,7 @@
     font-size: 16px;
 }
 
-.sol4_slider {
+.launch_sol4_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.192);
     left: 53.3%;
@@ -137,7 +137,7 @@
     visibility:visible;
 }
 
-.sol5_slider {
+.launch_sol5_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.229);
     left: 53.3%;
@@ -145,7 +145,7 @@
     font-size: 16px;
 }
 
-.sol6_slider {
+.launch_sol6_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.265);
     left: 53.3%;
@@ -153,7 +153,7 @@
     font-size: 16px;
 }
 
-.sol7_slider {
+.launch_sol7_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.341);
     left: 53.3%;
@@ -161,7 +161,7 @@
     font-size: 16px;
 }
 
-.sol8_slider {
+.launch_sol8_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.378);
     left: 53.3%;
@@ -169,7 +169,7 @@
     font-size: 16px;
 }
 
-.sol9_slider {
+.launch_sol9_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.414);
     left: 53.3%;
@@ -177,7 +177,7 @@
     font-size: 16px;
 }
 
-.sol10_slider {
+.launch_sol10_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.075);
     left: 79.5%;
@@ -185,7 +185,7 @@
     font-size: 16px;
 }
 
-.sol11_slider {
+.launch_sol11_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.233);
     left: 91.2%;
@@ -193,7 +193,7 @@
     font-size: 16px;
 }
 
-.sol12_slider {
+.launch_sol12_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.345);
     left: 80%;
@@ -201,15 +201,14 @@
     font-size: 16px;
 }
 
-.sol13_slider {
+.launch_sol13_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.403);
     left: 79.7%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
-
-.sol14_slider {
+.launch_sol14_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.367);
     left: 91.3%;
@@ -217,7 +216,7 @@
     font-size: 16px;
 }
 
-.pmp3_slider {
+.launch_pmp3_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -226,7 +225,7 @@
     visibility:hidden;
 }
 
-.ign1_slider {
+.launch_ign1_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.468);
     left: 56.5%;
@@ -234,7 +233,7 @@
     font-size: 16px;
 }
 
-.ign2_slider {
+.launch_ign2_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.486);
     left: 56.5%;
@@ -242,7 +241,7 @@
     font-size: 16px;
 }
 
-.heater_slider {
+.launch_heater_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.386);
     left: 26.4%;
@@ -250,7 +249,7 @@
     font-size: 16px;
 }
 
-.tc1_temperature {
+.launch_tc1_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.245);
     left: 10.7%;
@@ -258,7 +257,7 @@
     font-size: 14px;
 }
 
-.tc2_temperature {
+.launch_tc2_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -267,7 +266,7 @@
     visibility:hidden;
 }
 
-.tc3_temperature {
+.launch_tc3_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -276,7 +275,7 @@
     visibility:hidden;
 }
 
-.tc4_temperature {
+.launch_tc4_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -285,7 +284,7 @@
     visibility:hidden;
 }
 
-.tc5_temperature {
+.launch_tc5_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -294,7 +293,7 @@
     visibility:hidden;
 }
 
-.tc6_temperature {
+.launch_tc6_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -303,7 +302,7 @@
     visibility:hidden;
 }
 
-.tc7_temperature {
+.launch_tc7_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -312,7 +311,7 @@
     visibility:hidden;
 }
 
-.tc8_temperature {
+.launch_tc8_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -321,7 +320,7 @@
     visibility:hidden;
 }
 
-.tc9_temperature {
+.launch_tc9_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -330,7 +329,7 @@
     visibility:hidden;
 }
 
-.tc10_temperature {
+.launch_tc10_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.215);
     left: 80.7%;
@@ -338,7 +337,7 @@
     font-size: 14px;
 }
 
-.tc11_temperature {
+.launch_tc11_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.436);
     left: 80.8%;
@@ -346,7 +345,7 @@
     font-size: 14px;
 }
 
-.tc12_temperature {
+.launch_tc12_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.437);
     left: 90.3%;
@@ -354,7 +353,7 @@
     font-size: 14px;
 }
 
-.lc1_mass {
+.launch_lc1_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.355);
     left: 5%;
@@ -362,7 +361,7 @@
     font-size: 14px;
 }
 
-.lc2_mass {
+.launch_lc2_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.455);
     left: 5%;
@@ -370,7 +369,7 @@
     font-size: 14px;
 }
 
-.lc3_mass {
+.launch_lc3_mass {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -379,7 +378,7 @@
     visibility:hidden;
 }
 
-.lc4_mass {
+.launch_lc4_mass {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -388,7 +387,7 @@
     visibility:hidden;
 }
 
-.lc5_mass {
+.launch_lc5_mass {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -397,7 +396,7 @@
     visibility:hidden;
 }
 
-.lc6_mass {
+.launch_lc6_mass {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -406,7 +405,7 @@
     visibility:hidden;
 }
 
-.lc7_mass {
+.launch_lc7_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.105);
     left: 62.5%;
@@ -414,7 +413,7 @@
     font-size: 14px;
 }
 
-.pt1_pressure {
+.launch_pt1_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.446);
     left: 29.45%;
@@ -422,7 +421,7 @@
     font-size: 14px;
 }
 
-.pt2_pressure {
+.launch_pt2_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.089);
     left: 9.28%;
@@ -430,7 +429,7 @@
     font-size: 14px;
 }
 
-.pt3_pressure {
+.launch_pt3_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.091);
     left: 26.6%;
@@ -438,7 +437,7 @@
     font-size: 14px;
 }
 
-.pt4_pressure {
+.launch_pt4_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.245);
     left: 6.9%;
@@ -446,7 +445,7 @@
     font-size: 14px;
 }
 
-.pt5_pressure {
+.launch_pt5_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.246);
     left: 26.55%;
@@ -454,7 +453,7 @@
     font-size: 14px;
 }
 
-.pt6_pressure {
+.launch_pt6_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -463,7 +462,7 @@
     visibility:hidden;
 }
 
-.pt7_pressure {
+.launch_pt7_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -472,7 +471,7 @@
     visibility:hidden;
 }
 
-.pt8_pressure {
+.launch_pt8_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -481,7 +480,7 @@
     visibility:hidden;
 }
 
-.pt9_pressure {
+.launch_pt9_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -490,7 +489,7 @@
     visibility:hidden;
 }
 
-.pt10_pressure {
+.launch_pt10_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -499,7 +498,7 @@
     visibility:hidden;
 }
 
-.pt11_pressure {
+.launch_pt11_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -508,7 +507,7 @@
     visibility:hidden;
 }
 
-.pt12_pressure {
+.launch_pt12_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -517,7 +516,7 @@
     visibility:hidden;
 }
 
-.pt13_pressure {
+.launch_pt13_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -526,7 +525,7 @@
     visibility:hidden;
 }
 
-.pt14_pressure {
+.launch_pt14_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -535,7 +534,7 @@
     visibility:hidden;
 }
 
-.pt15_pressure {
+.launch_pt15_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.066);
     left: 86.7%;
@@ -543,7 +542,7 @@
     font-size: 14px;
 }
 
-.pt16_pressure {
+.launch_pt16_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.086);
     left: 94.85%;
@@ -551,7 +550,7 @@
     font-size: 14px;
 }
 
-.pt17_pressure {
+.launch_pt17_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.182);
     left: 80.7%;
@@ -559,7 +558,7 @@
     font-size: 14px;
 }
 
-.pt18_pressure {
+.launch_pt18_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.374);
     left: 80.8%;
@@ -567,7 +566,7 @@
     font-size: 14px;
 }
 
-.pt19_pressure {
+.launch_pt19_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.405);
     left: 90.3%;
@@ -576,7 +575,7 @@
 }
 
 /*
-.system_state {
+.launch_system_state {
     position: absolute;
     top: calc(var(--container-width) * 0.373);
     left: 42%;
@@ -584,7 +583,7 @@
     font-size: 12px;
 }
 
-.timer_state {
+.launch_timer_state {
     position: absolute;
     top: calc(var(--container-width) * 0.386);
     left: 42%;
@@ -592,7 +591,7 @@
     font-size: 12px;
 }
 
-.timer_period {
+.launch_timer_period {
     position: absolute;
     top: calc(var(--container-width) * 0.399);
     left: 44%;
@@ -600,7 +599,7 @@
     font-size: 12px;
 }
 
-.timer_remaining {
+.launch_timer_remaining {
     position: absolute;
     top: calc(var(--container-width) * 0.413);
     left: 45%;
