--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -9,7 +9,7 @@
     background-color: #d4163c;
 }
 
-.pbv1_slider {
+.static_pbv1_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.143);
     left: 15.5%;
@@ -17,7 +17,7 @@
     font-size: 16px;
 }
 
-.pbv2_slider {
+.static_pbv2_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.048);
     left: 33.5%;
@@ -25,7 +25,7 @@
     font-size: 16px;
 }
 
-.pbv3_slider {
+.static_pbv3_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.292);
     left: 17%;
@@ -33,7 +33,7 @@
     font-size: 16px;
 }
 
-.pbv4_slider {
+.static_pbv4_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.318);
     left: 34.3%;
@@ -41,7 +41,7 @@
     font-size: 16px;
 }
 
-.pbv5_slider {
+.static_pbv5_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.295);
     left: 62.3%;
@@ -49,8 +49,7 @@
     font-size: 16px;
 }
 
-
-.pbv6_slider {
+.static_pbv6_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.23);
     left: 62.3%;
@@ -58,7 +57,7 @@
     font-size: 16px;
 }
 
-.pbv7_slider {
+.static_pbv7_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.395);
     left: 47%;
@@ -66,7 +65,7 @@
     font-size: 16px;
 }
 
-.pbv8_slider {
+.static_pbv8_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.175);
     left: 53.7%;
@@ -74,7 +73,7 @@
     font-size: 16px;
 }
 
-.pbv9_slider {
+.static_pbv9_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.395);
     left: 68%;
@@ -82,7 +81,7 @@
     font-size: 16px;
 }
 
-.pbv10_slider {
+.static_pbv10_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.109);
     left: 83.8%;
@@ -90,7 +89,7 @@
     font-size: 16px;
 }
 
-.pbv11_slider {
+.static_pbv11_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.109);
     left: 95.8%;
@@ -98,7 +97,7 @@
     font-size: 16px;
 }
 
-.sol1_slider {
+.static_sol1_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.143);
     left: 23%;
@@ -106,7 +105,7 @@
     font-size: 16px;
 }
 
-.sol2_slider {
+.static_sol2_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.3);
     left: 24%;
@@ -114,7 +113,7 @@
     font-size: 16px;
 }
 
-.sol3_slider {
+.static_sol3_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -123,7 +122,7 @@
     visibility: hidden;
 }
 
-.sol4_slider {
+.static_sol4_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -132,7 +131,7 @@
     visibility: hidden;
 }
 
-.sol5_slider {
+.static_sol5_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -141,7 +140,7 @@
     visibility: hidden;
 }
 
-.sol6_slider {
+.static_sol6_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -150,7 +149,7 @@
     visibility: hidden;
 }
 
-.sol7_slider {
+.static_sol7_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -159,7 +158,7 @@
     visibility: hidden;
 }
 
-.sol8_slider {
+.static_sol8_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -168,7 +167,7 @@
     visibility: hidden;
 }
 
-.sol9_slider {
+.static_sol9_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -177,7 +176,7 @@
     visibility: hidden;
 }
 
-.sol10_slider {
+.static_sol10_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -186,7 +185,7 @@
     visibility: hidden;
 }
 
-.sol11_slider {
+.static_sol11_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -195,7 +194,7 @@
     visibility: hidden;
 }
 
-.sol12_slider {
+.static_sol12_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -204,7 +203,7 @@
     visibility: hidden;
 }
 
-.sol13_slider {
+.static_sol13_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -213,7 +212,7 @@
     visibility: hidden;
 }
 
-.sol14_slider {
+.static_sol14_slider {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -222,7 +221,7 @@
     visibility: hidden;
 }
 
-.heater_slider {
+.static_heater_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.386);
     left: 26.4%;
@@ -230,7 +229,7 @@
     font-size: 16px;
 }
 
-.pmp3_slider {
+.static_pmp3_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.321);
     left: 84%;
@@ -238,7 +237,7 @@
     font-size: 16px;
 }
 
-.ign1_slider {
+.static_ign1_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.41);
     left: 86%;
@@ -246,7 +245,7 @@
     font-size: 16px;
 }
 
-.ign2_slider {
+.static_ign2_slider {
     position: absolute;
     top: calc(var(--container-width) * 0.429);
     left: 86%;
@@ -254,7 +253,7 @@
     font-size: 16px;
 }
 
-.pt1_pressure {
+.static_pt1_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.446);
     left: 29.45%;
@@ -262,7 +261,7 @@
     font-size: 14px;
 }
 
-.pt2_pressure {
+.static_pt2_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.09);
     left: 9.25%;
@@ -270,7 +269,7 @@
     font-size: 14px;
 }
 
-.pt3_pressure {
+.static_pt3_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.091);
     left: 26.5%;
@@ -278,7 +277,7 @@
     font-size: 14px;
 }
 
-.pt4_pressure {
+.static_pt4_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.245);
     left: 6.9%;
@@ -286,7 +285,7 @@
     font-size: 14px;
 }
 
-.pt5_pressure {
+.static_pt5_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.246);
     left: 26.55%;
@@ -294,7 +293,7 @@
     font-size: 14px;
 }
 
-.pt6_pressure {
+.static_pt6_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.285);
     left: 45.2%;
@@ -302,7 +301,7 @@
     font-size: 14px;
 }
 
-.pt7_pressure {
+.static_pt7_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.459);
     left: 66.35%;
@@ -310,7 +309,7 @@
     font-size: 14px;
 }
 
-.pt8_pressure {
+.static_pt8_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.184);
     left: 65%;
@@ -318,7 +317,7 @@
     font-size: 14px;
 }
 
-.pt9_pressure {
+.static_pt9_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.0715);
     left: 62%;
@@ -326,7 +325,7 @@
     font-size: 14px;
 }
 
-.pt10_pressure {
+.static_pt10_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.1265);
     left: 45.3%;
@@ -334,7 +333,7 @@
     font-size: 14px;
 }
 
-.pt11_pressure {
+.static_pt11_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.1825);
     left: 87.55%;
@@ -342,7 +341,7 @@
     font-size: 14px;
 }
 
-.pt12_pressure {
+.static_pt12_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.1825);
     left: 96.29%;
@@ -350,7 +349,7 @@
     font-size: 14px;
 }
 
-.pt13_pressure {
+.static_pt13_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.2645);
     left: 85.35%;
@@ -358,7 +357,7 @@
     font-size: 14px;
 }
 
-.pt14_pressure {
+.static_pt14_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0.37);
     left: 85.35%;
@@ -366,7 +365,7 @@
     font-size: 14px;
 }
 
-.pt15_pressure {
+.static_pt15_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -375,7 +374,7 @@
     visibility:hidden;
 }
 
-.pt16_pressure {
+.static_pt16_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -384,7 +383,7 @@
     visibility:hidden;
 }
 
-.pt17_pressure {
+.static_pt17_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -393,7 +392,7 @@
     visibility:hidden;
 }
 
-.pt18_pressure {
+.static_pt18_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -402,7 +401,7 @@
     visibility:hidden;
 }
 
-.pt19_pressure {
+.static_pt19_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -411,7 +410,7 @@
     visibility:hidden;
 }
 
-.tc1_temperature {
+.static_tc1_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.245);
     left: 10.7%;
@@ -419,7 +418,7 @@
     font-size: 14px;
 }
 
-.tc2_temperature {
+.static_tc2_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.285);
     left: 48.8%;
@@ -427,7 +426,7 @@
     font-size: 14px;
 }
 
-.tc3_temperature {
+.static_tc3_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.1265);
     left: 49.1%;
@@ -435,7 +434,7 @@
     font-size: 14px;
 }
 
-.tc4_temperature {
+.static_tc4_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.218);
     left: 87.6%;
@@ -443,7 +442,7 @@
     font-size: 14px;
 }
 
-.tc5_temperature {
+.static_tc5_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.218);
     left: 96.29%;
@@ -451,7 +450,7 @@
     font-size: 14px;
 }
 
-.tc6_temperature {
+.static_tc6_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.2635);
     left: 88.95%;
@@ -459,7 +458,7 @@
     font-size: 14px;
 }
 
-.tc7_temperature {
+.static_tc7_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.37);
     left: 88.95%;
@@ -467,7 +466,7 @@
     font-size: 14px;
 }
 
-.tc8_temperature {
+.static_tc8_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.318);
     left: 97.5%;
@@ -475,7 +474,7 @@
     font-size: 14px;
 }
 
-.tc9_temperature {
+.static_tc9_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0.425);
     left: 95.3%;
@@ -483,7 +482,7 @@
     font-size: 14px;
 }
 
-.tc10_temperature {
+.static_tc10_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -492,7 +491,7 @@
     visibility:hidden;
 }
 
-.tc11_temperature {
+.static_tc11_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -501,7 +500,7 @@
     visibility:hidden;
 }
 
-.tc12_temperature {
+.static_tc12_temperature {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -510,7 +509,7 @@
     visibility:hidden;
 }
 
-.lc1_mass {
+.static_lc1_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.355);
     left: 5%;
@@ -518,7 +517,7 @@
     font-size: 14px;
 }
 
-.lc2_mass {
+.static_lc2_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.455);
     left: 5%;
@@ -526,7 +525,7 @@
     font-size: 14px;
 }
 
-.lc3_mass {
+.static_lc3_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.23);
     left: 47%;
@@ -534,7 +533,7 @@
     font-size: 14px;
 }
 
-.lc4_mass {
+.static_lc4_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.452);
     left: 61.4%;
@@ -542,7 +541,7 @@
     font-size: 14px;
 }
 
-.lc5_mass {
+.static_lc5_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.266);
     left: 53.4%;
@@ -550,7 +549,7 @@
     font-size: 14px;
 }
 
-.lc6_mass {
+.static_lc6_mass {
     position: absolute;
     top: calc(var(--container-width) * 0.452);
     left: 92%;
@@ -558,7 +557,7 @@
     font-size: 14px;
 }
 
-.lc7_mass {
+.static_lc7_mass {
     position: absolute;
     top: calc(var(--container-width) * 0);
     left: 0%;
@@ -568,7 +567,7 @@
 }
 
 /*
-.system_state {
+.static_system_state {
     position: absolute;
     top: calc(var(--container-width) * 0.373);
     left: 42%;
@@ -584,7 +583,7 @@
     font-size: 12px;
 }
 
-.timer_period {
+.static_timer_period {
     position: absolute;
     top: calc(var(--container-width) * 0.399);
     left: 44%;
@@ -592,7 +591,7 @@
     font-size: 12px;
 }
 
-.timer_remaining {
+.static_timer_remaining {
     position: absolute;
     top: calc(var(--container-width) * 0.413);
     left: 45%;
