updating front end for new statemachine, p&id

--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -1,8 +1,8 @@
 .next-state-btn {
     position: absolute;
     top: calc(var(--container-width) * 0.532);
+    transform: scale(calc(var(--container-width-unitless) / 2000));
     width: 200px;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1600));
 }
 
 .fire-btn {
@@ -83,16 +83,16 @@
 
 .static_pbv10_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.109);
-    left: 83.8%;
+    top: calc(var(--container-width) * 0.099);
+    left: 82%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .static_pbv11_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.109);
-    left: 95.8%;
+    top: calc(var(--container-width) * 0.099);
+    left: 93.9%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
@@ -239,24 +239,24 @@
 
 .static_ign1_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.41);
-    left: 86%;
+    top: calc(var(--container-width) * 0.3075);
+    left: 85%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .static_ign2_slider {
     position: absolute;
-    top: calc(var(--container-width) * 0.429);
-    left: 86%;
+    top: calc(var(--container-width) * 0.325);
+    left: 85%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
     font-size: 16px;
 }
 
 .static_pt1_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.446);
-    left: 29.45%;
+    top: calc(var(--container-width) * 0.428);
+    left: 87.65%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
@@ -335,32 +335,16 @@
 
 .static_pt11_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.1825);
-    left: 87.55%;
+    top: calc(var(--container-width) * 0.129);
+    left: 83.59%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .static_pt12_pressure {
     position: absolute;
-    top: calc(var(--container-width) * 0.1825);
-    left: 96.29%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 14px;
-}
-
-.static_pt13_pressure {
-    position: absolute;
-    top: calc(var(--container-width) * 0.2645);
-    left: 85.35%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 14px;
-}
-
-.static_pt14_pressure {
-    position: absolute;
-    top: calc(var(--container-width) * 0.37);
-    left: 85.35%;
+    top: calc(var(--container-width) * 0.129);
+    left: 92.35%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
@@ -436,48 +420,24 @@
 
 .static_tc4_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.218);
-    left: 87.6%;
+    top: calc(var(--container-width) * 0.165);
+    left: 83.59%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .static_tc5_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.218);
-    left: 96.29%;
+    top: calc(var(--container-width) * 0.165);
+    left: 92.35%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .static_tc6_temperature {
     position: absolute;
-    top: calc(var(--container-width) * 0.2635);
-    left: 88.95%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 14px;
-}
-
-.static_tc7_temperature {
-    position: absolute;
-    top: calc(var(--container-width) * 0.37);
-    left: 88.95%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 14px;
-}
-
-.static_tc8_temperature {
-    position: absolute;
-    top: calc(var(--container-width) * 0.318);
-    left: 97.5%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 14px;
-}
-
-.static_tc9_temperature {
-    position: absolute;
-    top: calc(var(--container-width) * 0.425);
-    left: 95.3%;
+    top: calc(var(--container-width) * 0.321);
+    left: 94.6%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
@@ -511,16 +471,16 @@
 
 .static_lc1_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.355);
-    left: 5%;
+    top: calc(var(--container-width) * 0.44);
+    left: 6.132%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
 
 .static_lc2_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.455);
-    left: 5%;
+    top: calc(var(--container-width) * 0.44);
+    left: 13.9%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
@@ -551,8 +511,8 @@
 
 .static_lc6_mass {
     position: absolute;
-    top: calc(var(--container-width) * 0.452);
-    left: 92%;
+    top: calc(var(--container-width) * 0.23);
+    left: 87.95%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
     font-size: 14px;
 }
@@ -566,35 +526,9 @@
     visibility:hidden;
 }
 
-/*
-.static_system_state {
+.button_a {
     position: absolute;
-    top: calc(var(--container-width) * 0.373);
-    left: 42%;
+    top: calc(var(--container-width) * 25);
+    left: 25%;
     transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 12px;
 }
-
-.timer_state {
-    position: absolute;
-    top: calc(var(--container-width) * 0.386);
-    left: 42%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 12px;
-}
-
-.static_timer_period {
-    position: absolute;
-    top: calc(var(--container-width) * 0.399);
-    left: 44%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 12px;
-}
-
-.static_timer_remaining {
-    position: absolute;
-    top: calc(var(--container-width) * 0.413);
-    left: 45%;
-    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
-    font-size: 12px;
-} */
