adding pt13 14 to the diagram

--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -349,6 +349,22 @@
     font-size: 14px;
 }
 
+.static_pt13_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0.21);
+    left: 83.59%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+}
+
+.static_pt14_pressure {
+    position: absolute;
+    top: calc(var(--container-width) * 0.21);
+    left: 92.35%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1500));
+    font-size: 14px;
+}
+
 .static_pt15_pressure {
     position: absolute;
     top: calc(var(--container-width) * 0);
