Adding 5 cold flow valves per jayden request

--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -541,3 +541,43 @@
     font-size: 14px;
     visibility:hidden;
 }
+
+.cold_flow_valve_1_slider{
+    position: absolute;
+    top: calc(var(--container-width) * 0.535);
+    left: 85%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.cold_flow_valve_2_slider{
+    position: absolute;
+    top: calc(var(--container-width) * 0.55);
+    left: 85%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.cold_flow_valve_3_slider{
+    position: absolute;
+    top: calc(var(--container-width) * 0.565);
+    left: 85%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.cold_flow_valve_4_slider{
+    position: absolute;
+    top: calc(var(--container-width) * 0.58);
+    left: 85%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
+
+.cold_flow_valve_5_slider{
+    position: absolute;
+    top: calc(var(--container-width) * 0.595);
+    left: 85%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 2000));
+    font-size: 16px;
+}
