changes from trailer top test + tare/untare

--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -584,6 +584,48 @@
 	transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
 }
 
+.lc1_untare_button {
+	position: absolute;
+	top: calc(var(--container-width) * 0.495);
+	left: 6.2%;
+	transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
+
+.lc2_untare_button {
+    position: absolute;
+    top: calc(var(--container-width) * 0.495);
+    left: 13.95%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
+
+.lc3_untare_button {
+    position: absolute;
+    top: calc(var(--container-width) * 0.25);
+    left: 43.5%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
+
+.lc4_untare_button {
+    position: absolute;
+    top: calc(var(--container-width) * 0.47);
+    left: 57.8%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
+
+.lc5_untare_button {
+    position: absolute;
+    top: calc(var(--container-width) * 0.323);
+    left: 53.4%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
+
+.lc6_untare_button {
+    position: absolute;
+    top: calc(var(--container-width) * 0.273);
+    left: 87.94%;
+    transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
+
 .plc_reset {
 	position: absolute;
 	top: calc(var(--container-width) * 0.53);
