adding recording button

--- a/RocketControlUnitGUI/src/styles/static-fire.postcss
+++ b/RocketControlUnitGUI/src/styles/static-fire.postcss
@@ -632,3 +632,10 @@
 	left: 95%;
 	transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
 }
+
+.recording_btn {
+    position: absolute;
+	top: calc(var(--container-width) * 0.53);
+	left: 88%;
+	transform: translate(-50%, -50%) scale(calc(var(--container-width-unitless) / 1900));
+}
